[tool.poetry]
name = "longtermironcladcoolingfan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytrends = "^4.7"
gspread = "^3.6"
gspread-formatting = "^0.2.4"
oauth2client = "^4.1"
pandas = "^1.0"
pyasn1 = "^0.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
